<resources>
    <string name="Day">D</string>
    <string name="Month">M</string>
    <string name="Year">Y</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="affirm">确认</string>
    <string name="app_name">M90</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arrow">箭头</string>
    <string name="basic_newspaper_angle">是否开角度</string>
    <string name="basic_newspaper_attribute">线路属性</string>
    <string name="basic_newspaper_attribute_anti">防反</string>
    <string name="basic_newspaper_attribute_loop">环线</string>
    <string name="basic_newspaper_attribute_open">对开</string>
    <string name="basic_newspaper_dialect">是否播报方言</string>
    <string name="basic_newspaper_english">是否播报英文</string>
    <string name="basic_newspaper_external">是否开外音</string>
    <string name="basic_newspaper_innervolume">车内音量</string>
    <string name="basic_newspaper_outvolume">车外音量</string>
    <string name="basic_newspaper_overtone">是否报超速音</string>
    <string name="basic_newspaper_point">是否整点报时</string>
    <string name="basic_setup_language">语言设置</string>
    <string name="basic_setup_network">网络设置</string>
    <string name="basic_setup_newspaper">报站设置</string>
    <string name="basic_setup_other">其他设置</string>
    <string name="basic_setup_serial_port">外设设置</string>
    <string name="basic_setup_tts">TTS设置</string>
    <string name="basic_setup_wireless">无线和网络</string>
    <string name="basic_tts_dispatch">调度音量</string>
    <string name="basic_tts_shouting">喊话音量</string>
    <string name="basic_tts_switch">是否TTS报站</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="broadcast_test">播报卡号</string>
    <string name="cancel">取消</string>
    <string name="ch_dvr">DVR：CHANNEL</string>
    <string name="ch_gps">GPS：MODE</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">关闭</string>
    <string name="collection_attribute">站点属性</string>
    <string name="collection_attribute_hint">请选择站点属性</string>
    <string name="collection_attribute_wp_hint">选择站点属性</string>
    <string name="collection_current_gps">实时GPS</string>
    <string name="collection_direction_down">下行</string>
    <string name="collection_direction_upstream">上行</string>
    <string name="collection_dlg_msg">是否确定站点学习，确定将会修改站点属性GPS信息?</string>
    <string name="collection_line">线路名称</string>
    <string name="collection_line_direction">线路方向</string>
    <string name="collection_line_hint">请选择线路</string>
    <string name="collection_line_wp_hint">选择线路</string>
    <string name="collection_number">编号</string>
    <string name="collection_order_number">站序</string>
    <string name="collection_other">其它采集</string>
    <string name="collection_save">保存</string>
    <string name="collection_select_direction">选择线路方向</string>
    <string name="collection_site_gps">站点GPS</string>
    <string name="collection_site_learn">站点采集</string>
    <string name="collection_site_name">站点名称</string>
    <string name="collection_site_name_hint">请选择站点</string>
    <string name="collection_site_name_wp_hint">选择站点</string>
    <string name="collection_tip">没有站点属性，不能学习</string>
    <string name="collection_tip1">当前没有找到可学习的线路</string>
    <string name="collection_tip2">请先选择线路名称</string>
    <string name="confirm">确定</string>
    <string name="connected">已连接</string>
    <string name="dateformat">EEEE\nyyyy年MM月dd日 HH:mm:ss</string>
    <string name="del">删除</string>
    <string name="dispatch_center_attendance">司机考勤</string>
    <string name="dispatch_center_card_number">卡号:</string>
    <string name="dispatch_center_card_number_hint">请输入卡号</string>
    <string name="dispatch_center_dispatch">调度申请</string>
    <string name="dispatch_center_exit_operation">退出运营</string>
    <string name="dispatch_center_gooff_signin">下班签退</string>
    <string name="dispatch_center_goto_signin">上班签到</string>
    <string name="dispatch_center_ledPeripheral_test">外设机务</string>
    <string name="dispatch_center_name">姓名:</string>
    <string name="dispatch_center_operation">加入运营</string>
    <string name="dispatch_center_paycard_test">刷卡测试</string>
    <string name="dispatch_center_request_charging">请求充电</string>
    <string name="dispatch_center_signin">签到</string>
    <string name="dispatch_center_vehicle_failure">车辆故障</string>
    <string name="dispatchcenter_title">调度中心</string>
    <string name="down">下行</string>
    <string name="dvr_ch_hint">请选择使用的波特率</string>
    <string name="dvr_keyboard_back">返  回</string>
    <string name="dvr_keyboard_del">DEL</string>
    <string name="dvr_keyboard_down">↓</string>
    <string name="dvr_keyboard_ent">ENT</string>
    <string name="dvr_keyboard_esc">ESC</string>
    <string name="dvr_keyboard_left">←</string>
    <string name="dvr_keyboard_m">M</string>
    <string name="dvr_keyboard_number0">0</string>
    <string name="dvr_keyboard_number1">1</string>
    <string name="dvr_keyboard_number2">2</string>
    <string name="dvr_keyboard_number3">3</string>
    <string name="dvr_keyboard_number4">4</string>
    <string name="dvr_keyboard_number5">5</string>
    <string name="dvr_keyboard_number6">6</string>
    <string name="dvr_keyboard_number7">7</string>
    <string name="dvr_keyboard_number8">8</string>
    <string name="dvr_keyboard_number9">9</string>
    <string name="dvr_keyboard_right">→</string>
    <string name="dvr_keyboard_upward">↑</string>
    <string name="dvr_v">通道</string>
    <string name="effective">有效</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="file_delete_local_logs">删除本地日志</string>
    <string name="file_export">导出文件</string>
    <string name="file_export_btn">导出</string>
    <string name="file_export_complete_fail">导出报站文件失败,请重试！</string>
    <string name="file_export_complete_fail1">没有检查到可导出U盘！</string>
    <string name="file_export_complete_log_suss">成功导出日志文件，请拔出U盘.</string>
    <string name="file_export_complete_suss">成功导出报站文件，请拔出U盘.</string>
    <string name="file_export_load_tip">正在导出报站数据,请务必不要做其他操作…</string>
    <string name="file_export_log">导出日志</string>
    <string name="file_export_log_complete_fail">导出日志文件失败,请重试！</string>
    <string name="file_export_log_complete_fail1">没有可导出的日志！</string>
    <string name="file_export_log_load_tip">正在导出日志文件,请务必不要做其他操作…</string>
    <string name="file_export_log_tip">确定导出日志文件?</string>
    <string name="file_export_tip">确定导出报站文件?</string>
    <string name="file_import">导入文件</string>
    <string name="file_import_btn">导入</string>
    <string name="file_import_complete_fail">导入报站文件失败,请重试！</string>
    <string name="file_import_complete_fail1">没有检查到可导入报站文件！</string>
    <string name="file_import_complete_suss">成功导入报站文件，请拔出U盘.</string>
    <string name="file_import_load_tip">导入报站数据,请务必不要做其他操作…</string>
    <string name="file_import_tip">确定导入报站文件?</string>
    <string name="file_udisk_upgrade">U盘升级</string>
    <string name="file_upgrade_btn">升级</string>
    <string name="file_upgrade_find">Apk文件：%1$s</string>
    <string name="file_upgrade_load_tip">正在升级APP,请务必不要做其他操作…</string>
    <string name="file_upgrade_tip">确定升级APP?</string>
    <string name="filemanage_title">文件管理</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="index">index</string>
    <string name="infobrows_not_tip">没有信息浏览~</string>
    <string name="infobrows_send_msg">请勾选车辆状态</string>
    <string name="infobrows_title">信息浏览</string>
    <string name="ingoto">进入</string>
    <string name="invalid">无效</string>
    <string name="keyboard_down">↓</string>
    <string name="keyboard_esc">ESC</string>
    <string name="keyboard_f0">F0</string>
    <string name="keyboard_f1">F1</string>
    <string name="keyboard_f2">F2</string>
    <string name="keyboard_f3">F3</string>
    <string name="keyboard_f4">F4</string>
    <string name="keyboard_f5">F5</string>
    <string name="keyboard_f6">F6</string>
    <string name="keyboard_f7">F7</string>
    <string name="keyboard_f8">F8</string>
    <string name="keyboard_f9">F9</string>
    <string name="keyboard_upward">↑</string>
    <string name="language_auto">自动</string>
    <string name="language_cn">简体中文</string>
    <string name="language_en">英文</string>
    <string name="language_es">西班牙文</string>
    <string name="language_ko">韩文</string>
    <string name="language_traditional">繁體中文</string>
    <string name="main_cease">停止</string>
    <string name="main_dlg_author_ip">平台地址</string>
    <string name="main_dlg_author_ip_hint">例如(192.168.0.1:8080)</string>
    <string name="main_dlg_author_ip_vluae">39.104.66.194:8081</string>
    <string name="main_dlg_author_name">终端名称</string>
    <string name="main_dlg_author_name_hint">作为在平台唯一名称</string>
    <string name="main_dlg_author_user">平台账号</string>
    <string name="main_dlg_author_user_hint">选填(默认admin账号)</string>
    <string name="main_dlg_terminal_authorization">终端授权</string>
    <string name="main_dvr">DVR</string>
    <string name="main_menu">菜单</string>
    <string name="main_message_view">消息\n查看</string>
    <string name="main_newspaper_station">报站</string>
    <string name="main_repeat">重复</string>
    <string name="main_scheduling_query">排班\n查询</string>
    <string name="main_switch">切换</string>
</resources>