<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="@dimen/d_82">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/d_710"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/c_000000"
                android:id="@+id/butNumberF1"
                android:background="@drawable/btn_keyboard_white_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_50"
                android:layout_margin="@dimen/d_6"
                android:text="@string/keyboard_f1"
                android:soundEffectsEnabled="false"/>
            <Button
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/c_000000"
                android:id="@+id/butNumberF3"
                android:background="@drawable/btn_keyboard_white_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_50"
                android:layout_margin="@dimen/d_6"
                android:text="@string/keyboard_f3"
                android:soundEffectsEnabled="false"/>
            <Button
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/c_000000"
                android:id="@+id/butNumberF5"
                android:background="@drawable/btn_keyboard_white_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_50"
                android:layout_margin="@dimen/d_6"
                android:text="@string/keyboard_f5"
                android:soundEffectsEnabled="false"/>
            <Button
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/c_000000"
                android:id="@+id/butNumberF7"
                android:background="@drawable/btn_keyboard_white_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_50"
                android:layout_margin="@dimen/d_6"
                android:text="@string/keyboard_f7"
                android:soundEffectsEnabled="false"/>
            <Button
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/c_000000"
                android:id="@+id/butNumberF9"
                android:background="@drawable/btn_keyboard_white_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_50"
                android:layout_margin="@dimen/d_6"
                android:text="@string/keyboard_f9"
                android:soundEffectsEnabled="false"/>
            <Button
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/c_000000"
                android:id="@+id/butMainUp"
                android:background="@drawable/btn_keyboard_white_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_50"
                android:layout_margin="@dimen/d_6"
                android:text="@string/keyboard_upward"
                android:soundEffectsEnabled="false"/>
            <Button
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/c_000000"
                android:id="@+id/butMainMsg"
                android:background="@drawable/btn_keyboard_white_bg"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_margin="@dimen/d_6"
                android:text="@string/main_message_view"
                android:soundEffectsEnabled="false"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/c_000000"
                android:id="@+id/butNumberF2"
                android:background="@drawable/btn_keyboard_white_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_50"
                android:layout_margin="@dimen/d_6"
                android:text="@string/keyboard_f2"
                android:soundEffectsEnabled="false"/>
            <Button
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/c_000000"
                android:id="@+id/butNumberF4"
                android:background="@drawable/btn_keyboard_white_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_50"
                android:layout_margin="@dimen/d_6"
                android:text="@string/keyboard_f4"
                android:soundEffectsEnabled="false"/>
            <Button
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/c_000000"
                android:id="@+id/butNumberF6"
                android:background="@drawable/btn_keyboard_white_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_50"
                android:layout_margin="@dimen/d_6"
                android:text="@string/keyboard_f6"
                android:soundEffectsEnabled="false"/>
            <Button
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/c_000000"
                android:id="@+id/butNumberF8"
                android:background="@drawable/btn_keyboard_white_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_50"
                android:layout_margin="@dimen/d_6"
                android:text="@string/keyboard_f8"
                android:soundEffectsEnabled="false"/>
            <Button
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/c_000000"
                android:id="@+id/butNumberF0"
                android:background="@drawable/btn_keyboard_white_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_50"
                android:layout_margin="@dimen/d_6"
                android:text="@string/keyboard_f0"
                android:soundEffectsEnabled="false"/>
            <Button
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/c_000000"
                android:id="@+id/butMainDown"
                android:background="@drawable/btn_keyboard_white_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_50"
                android:layout_margin="@dimen/d_6"
                android:text="@string/keyboard_down"
                android:soundEffectsEnabled="false"/>
            <Button
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/c_000000"
                android:id="@+id/butMainQuery"
                android:background="@drawable/btn_keyboard_white_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_60"
                android:layout_margin="@dimen/d_6"
                android:text="@string/main_scheduling_query"
                android:soundEffectsEnabled="false"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/c_000000"
        android:id="@+id/butESC"
        android:background="@drawable/btn_keyboard_white_bg"
        android:layout_width="@dimen/d_70"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/d_6"
        android:text="@string/keyboard_esc"
        android:soundEffectsEnabled="false"/>
</LinearLayout>
