<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/d_10"
    android:layout_marginRight="@dimen/d_10">
    <TextView
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/c_000000"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_16"
        android:text="@string/main_dlg_terminal_authorization"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_44"
        android:layout_marginTop="@dimen/d_20">
        <TextView
            android:textSize="18sp"
            android:textColor="@color/c_000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d_30"
            android:text="@string/main_dlg_author_name"/>
        <EditText
            android:textSize="18sp"
            android:textColor="@color/c_000000"
            android:textColorHint="@color/c_808080"
            android:id="@+id/etAuthorName"
            android:background="@drawable/edittext_black_bg"
            android:paddingLeft="@dimen/d_10"
            android:paddingRight="@dimen/d_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/d_20"
            android:layout_marginRight="@dimen/d_30"
            android:hint="@string/main_dlg_author_name_hint"
            android:inputType="text"
            android:autofillHints="@string/main_dlg_author_name_hint"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_44"
        android:layout_marginTop="@dimen/d_20">
        <TextView
            android:textSize="18sp"
            android:textColor="@color/c_000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d_30"
            android:text="@string/main_dlg_author_ip"/>
        <EditText
            android:textSize="18sp"
            android:textColor="@color/c_000000"
            android:textColorHint="@color/c_808080"
            android:id="@+id/etAuthorIp"
            android:background="@drawable/edittext_black_bg"
            android:paddingLeft="@dimen/d_10"
            android:paddingRight="@dimen/d_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/d_20"
            android:layout_marginRight="@dimen/d_30"
            android:text="@string/main_dlg_author_ip_vluae"
            android:hint="@string/main_dlg_author_ip_hint"
            android:inputType="textPostalAddress"
            android:autofillHints="@string/main_dlg_author_ip_hint"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_44"
        android:layout_marginTop="@dimen/d_20">
        <TextView
            android:textSize="18sp"
            android:textColor="@color/c_000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d_30"
            android:text="@string/main_dlg_author_user"/>
        <EditText
            android:textSize="18sp"
            android:textColor="@color/c_000000"
            android:textColorHint="@color/c_808080"
            android:id="@+id/etAuthorUser"
            android:background="@drawable/edittext_black_bg"
            android:paddingLeft="@dimen/d_10"
            android:paddingRight="@dimen/d_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/d_20"
            android:layout_marginRight="@dimen/d_30"
            android:hint="@string/main_dlg_author_user_hint"
            android:inputType="text"
            android:autofillHints="@string/main_dlg_author_user_hint"/>
    </LinearLayout>
    <View
        android:background="@color/c_000000"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1px"
        android:layout_marginTop="@dimen/d_20"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_50"
        android:layout_marginLeft="@dimen/d_16"
        android:layout_marginRight="@dimen/d_16">
        <Button
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/c_0077ff"
            android:id="@+id/butCancel"
            android:background="@android:color/transparent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:layout_weight="1"/>
        <View
            android:background="@color/c_000000"
            android:layout_width="@dimen/d_1px"
            android:layout_height="match_parent"/>
        <Button
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/c_0077ff"
            android:id="@+id/butOk"
            android:background="@android:color/transparent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/confirm"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
