<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/rg_radio_language"
        android:paddingLeft="@dimen/d_22"
        android:paddingRight="@dimen/d_22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_20">
        <RadioButton
            android:textSize="20sp"
            android:textColor="@color/c_ffffff"
            android:id="@+id/rb_radio_language_auto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_50"
            android:button="@null"
            android:text="@string/language_auto"
            android:drawableLeft="@drawable/radio_bg"
            android:drawablePadding="@dimen/d_4"/>
        <View
            android:background="@color/c_ffffff"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_1px"/>
        <RadioButton
            android:textSize="20sp"
            android:textColor="@color/c_ffffff"
            android:id="@+id/rb_radio_language_ch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_50"
            android:button="@null"
            android:text="@string/language_cn"
            android:drawableLeft="@drawable/radio_bg"
            android:drawablePadding="@dimen/d_4"/>
        <View
            android:background="@color/c_ffffff"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_1px"/>
        <RadioButton
            android:textSize="20sp"
            android:textColor="@color/c_ffffff"
            android:id="@+id/rb_radio_language_tr"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_50"
            android:button="@null"
            android:text="@string/language_traditional"
            android:drawableLeft="@drawable/radio_bg"
            android:drawablePadding="@dimen/d_4"/>
        <View
            android:background="@color/c_ffffff"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_1px"/>
        <RadioButton
            android:textSize="20sp"
            android:textColor="@color/c_ffffff"
            android:id="@+id/rb_radio_language_en"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_50"
            android:button="@null"
            android:text="@string/language_en"
            android:drawableLeft="@drawable/radio_bg"
            android:drawablePadding="@dimen/d_4"/>
        <View
            android:background="@color/c_ffffff"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_1px"/>
        <RadioButton
            android:textSize="20sp"
            android:textColor="@color/c_ffffff"
            android:id="@+id/rb_radio_language_ko"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_50"
            android:button="@null"
            android:text="@string/language_ko"
            android:drawableLeft="@drawable/radio_bg"
            android:drawablePadding="@dimen/d_4"/>
        <View
            android:background="@color/c_ffffff"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_1px"/>
        <RadioButton
            android:textSize="20sp"
            android:textColor="@color/c_ffffff"
            android:id="@+id/rb_radio_language_es"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_50"
            android:button="@null"
            android:text="@string/language_es"
            android:drawableLeft="@drawable/radio_bg"
            android:drawablePadding="@dimen/d_4"/>
    </RadioGroup>
    <Button
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/c_000000"
        android:id="@+id/butAffirm"
        android:background="@drawable/btn_login_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d_30"
        android:layout_marginTop="@dimen/d_50"
        android:layout_marginRight="@dimen/d_30"
        android:text="@string/affirm"/>
</LinearLayout>
