<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="@dimen/d_82">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/rlOperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:textSize="24sp"
            android:textColor="@color/c_000000"
            android:id="@+id/butNewspaperStation"
            android:background="@drawable/operation_bg"
            android:layout_width="@dimen/d_80"
            android:layout_height="@dimen/d_70"
            android:layout_marginLeft="@dimen/d_130"
            android:layout_marginTop="@dimen/d_8"
            android:layout_marginRight="@dimen/d_30"
            android:text="@string/main_newspaper_station"
            android:soundEffectsEnabled="false"/>
        <Button
            android:textSize="24sp"
            android:textColor="@color/c_000000"
            android:id="@+id/butRepeat"
            android:background="@drawable/operation_bg"
            android:layout_width="@dimen/d_80"
            android:layout_height="@dimen/d_70"
            android:layout_marginLeft="@dimen/d_20"
            android:layout_marginTop="@dimen/d_8"
            android:layout_marginRight="@dimen/d_30"
            android:text="@string/main_repeat"
            android:soundEffectsEnabled="false"/>
        <Button
            android:textSize="24sp"
            android:textColor="@color/c_000000"
            android:id="@+id/butSwitch"
            android:background="@drawable/operation_bg"
            android:layout_width="@dimen/d_80"
            android:layout_height="@dimen/d_70"
            android:layout_marginLeft="@dimen/d_20"
            android:layout_marginTop="@dimen/d_10"
            android:layout_marginRight="@dimen/d_30"
            android:text="@string/main_switch"
            android:soundEffectsEnabled="false"/>
        <Button
            android:id="@+id/butKeyboard"
            android:background="@drawable/keyboard_arrow"
            android:layout_width="@dimen/d_80"
            android:layout_height="@dimen/d_70"
            android:layout_marginLeft="@dimen/d_20"
            android:layout_marginTop="@dimen/d_4"
            android:layout_marginRight="@dimen/d_30"
            android:soundEffectsEnabled="false"/>
        <Button
            android:textSize="24sp"
            android:textColor="@color/c_000000"
            android:id="@+id/butCease"
            android:background="@drawable/operation_bg"
            android:layout_width="@dimen/d_80"
            android:layout_height="@dimen/d_70"
            android:layout_marginLeft="@dimen/d_20"
            android:layout_marginTop="@dimen/d_8"
            android:layout_marginRight="@dimen/d_30"
            android:text="@string/main_cease"
            android:soundEffectsEnabled="false"/>
        <Button
            android:textSize="24sp"
            android:textColor="@color/c_000000"
            android:id="@+id/butVideo"
            android:background="@drawable/operation_bg"
            android:layout_width="@dimen/d_80"
            android:layout_height="@dimen/d_70"
            android:layout_marginLeft="@dimen/d_20"
            android:layout_marginTop="@dimen/d_8"
            android:layout_marginRight="@dimen/d_30"
            android:text="@string/main_dvr"
            android:soundEffectsEnabled="false"/>
        <Button
            android:textSize="24sp"
            android:textColor="@color/c_000000"
            android:id="@+id/butMenu"
            android:background="@drawable/operation_bg"
            android:layout_width="@dimen/d_80"
            android:layout_height="@dimen/d_70"
            android:layout_marginLeft="@dimen/d_20"
            android:layout_marginTop="@dimen/d_8"
            android:layout_marginRight="@dimen/d_30"
            android:text="@string/main_menu"
            android:soundEffectsEnabled="false"/>
    </LinearLayout>
</RelativeLayout>
